Removed unneeded pressure plate block classes in favor of anonymous classes since they were empty anyway
Combined TragicPotions into TragicPotion, it's been bothering me that they were treated as separate classes so now it is more efficient having them combined
Changed Divination to Divinity
Fixed arbitrary variables in Gooey Fruit's item class
Adding more of the Lores as I do other random stuff

TODO still
Add the render/model for the Guardian Shields
Work on the Overlord
Add the Dimensional Tear entity in order to grant the player the new effect, Divination, in order to damage the Core
Add armor models
Add the Overlord armor set

Note for Bosses:
Some Bosses don't have structures or are random spawns, for each one I want an Iron Golem-like spawning ability in which you create a structure with a particular block and it is summoned
there (like I did for the Enyvil and Time Controller)

--Overlord plan, may fit in other random small things in between doing this--
Finish up the Overlord's motion and attack patterns, as well as create it's model
After all of that is finished, I'll work on it's combat form, which will be pretty much like a normal boss, since it attacks on the ground, it'll be able to create platforms
wherever it goes, made of dimensional fabric (a semi-transparent slab-like block), which will appear whenever it's motion is below 0 and it's not on the ground, it'll only activate
whenever it's target is above it to avoid it continously doing it
After all of the details of it's attack pattern and AI are done, I'll then work on it's model and animations
After that, I will set up the Cocoon form, which should be the easiest of all of the forms, it won't move and won't rotate, it'll be completely stationary, it will be the easiest
to animate and create AI for, as well as the easiest to create a model for, overall just the easiest
When each form is "defeated" it'll go through a transformation period which it then turns into it's next form